--- a/src/components/options/styles.css
+++ b/src/components/options/styles.css
@@ -1,6 +1,9 @@
 .optionsContainer {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  padding: 1em;
+  background-color: rgb(29, 28, 28);
 }
 
 .label {
@@ -9,4 +12,10 @@
   justify-content: center;
   align-items: center;
   color: #fff;
+}
+
+.hidden {
+  height: 0;
+  overflow: hidden;
+  padding: 0;
 }
