--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -1,10 +1,22 @@
 .header {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: black;
   color: #fff;
+  height: 5%;
 }
 
 .title {
   text-align: center;
-  margin: 1em auto;
+}
+
+.flexColumnCenter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.noMargin {
+  margin: 0;
 }
